# presentty

./: .gitignore  README.rst  bindep.txt  requirements.txt  setup.cfg  setup.py
example/: ansi.ans  demo.rst
presentty/: ansiparser.py  client.py  console.py  image.py  palette.py  presentty.py  rst.py  server.py  slide.py  text.py  transition.py
