# Copyright (C) 2015 James E. Blair <corvus@gnu.org>
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

[metadata]
name = presentty
summary = Console-based presentation system
description-file =
    README.rst
author = James E. Blair
author-email = corvus@gnu.org
classifier =
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: End Users/Desktop
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python
    Topic :: Multimedia :: Graphics :: Presentation

[pbr]
warnerrors = True

[entry_points]
console_scripts =
    presentty = presentty.presentty:main
    presentty-console = presentty.console:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1
